--- a/manufacturer/Trigger/trigger.html
+++ b/manufacturer/Trigger/trigger.html
@@ -6,3 +6,8 @@ we'll do trigger at database table
 select database table - go to trigger
 
 DELETE FROM product WHERE manufacturer_id = OLD.id
+
+
+///
+
+DELETE FROM result WHERE student_id = old.id
